# ProgI

./: CMakeLists.txt  main.c  second_lib.c
lib/: lib.c  lib.h
lib/incremental/: incremental.c  incremental.h
lib/sorting/: sorting.c  sorting.h
